# json_midi

./: .gitignore  Cargo.toml  LICENSE  README.org  build.rs  build.sh  flake.nix  rustfmt.toml
src/: main.rs  model.rs  player.rs  trackmode.rs
