[package]
name = "json_midi"
version = "1.1.0"
edition = "2021"

[package.metadata.winres]
ProductName = "Json Midi"
FileDescription = "Convert Midi to Json"
ProductVersion = "0.1.1"
LegalCopyright = "Copyright © 2022 HeapUnderflow"

[features]
default = ["strict-parsing"]
strict-parsing = ["midly/strict"]

[dependencies]
anyhow = "1.0.45"
chrono = "0.4.19"
itertools = "0.10.3"
midly = { version = "0.5.2", features = [] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
structopt = "0.3.25"

[profile.release]
opt-level = 2
codegen-units = 1
lto = "fat"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
